# M3_Project

./: .dockerignore  .env.example  Dockerfile  PRM3_Project - Online Store.md  README.md  compose.yaml  pyproject.toml
cart/: services.py  urls.py  views.py
cart/templates/cart/: cart.html
community/: urls.py  views.py
community/templates/community/: community.html
config/: settings.py  urls.py
contacts/: urls.py  views.py
contacts/templates/contacts/: contacts.html
orders/: models.py  urls.py
orders/migrations/: 0001_initial.py
orders/templates/orders/: checkout.html
products/: admin.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_product_currency_product_unit_measure.py  0002_productreview.py  0003_merge_20250821_1423.py  0004_productreview_title_alter_product_currency_and_more.py  0005_producttechspec.py  0006_alter_producttechspec_tech_spec.py  0007_alter_producttechspec_options.py
products/templates/products/: home.html  product_details.html
products/templatetags/: text_filters.py
resources/: urls.py  views.py
static/css/: main.css
static/js/: main.js
templates/: account.html  base.html  cart.html  checkout.html  forgot_password.html  guides-recipes.html  home.html  login.html  product-caramel-malt.html  product-cascade-hops.html  product-centennial-hops.html  product-citra-hops.html  product-imperial-yeast.html  product-maris-otter-malt.html  product-mosaic-hops.html  product-pilsner-malt.html  product-saaz-hops.html  product-safale-us05-yeast.html  product-unmalted-wheat.html  product-west-coast-ipa-kit.html  resources.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/users/: account.html  base.html  login.html  register.html
