[project]
name = "m3-project"
version = "0.1.0"
description = "m3 project"
authors = [
    {name = "ru3aah"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5,<6.0.0",
    "djangorestframework>=3.16.1,<4.0.0",
    "psycopg>=3.2.9,<4.0.0",
    "django-filter>=25.1,<26.0",
    "django-cors-headers>=4.7.0,<5.0.0",
    "djangorestframework-simplejwt>=5.5.1,<6.0.0",
    "drf-spectacular>=0.28.0,<0.29.0",
    "pillow>=11.3.0,<12.0.0",
    "uvicorn (>=0.35.0,<0.36.0)",
]

[project.optional-dependencies]
dev = [
    "pytest-django>=4.11.1,<5.0.0",
    "pytest>=8.4.1,<9.0.0",
    "flake8>=7.3.0,<8.0.0",
    "mypy>=1.17.1,<2.0.0",
    "black>=25.1.0,<26.0.0",
    "isort>=6.0.1,<7.0.0",
    "ipython>=9.4.0,<10.0.0",
    "django-extensions>=4.1,<5.0",
    "django-debug-toolbar>=6.0.0,<7.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "your_project.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--tb=short -v"